1st user management

--- a/dashboard/templates/ListOfReg/birth_list.html
+++ b/dashboard/templates/ListOfReg/birth_list.html
@@ -459,7 +459,7 @@ Lost Cattles
                     <div class="mb-3">
                       <label for="subcategory_id" class="form-label">Subcategory</label>
                       <select class="form-control" id="subcategory_id" name="subcategory_id" required>
-                        <option value="" selected disabled>Select Subcategory</option>
+                        <option value="" selected disabled>Select Subcategory(Optional)</option>
                         <!-- Options for subcategories will be populated dynamically by JavaScript -->
                       </select>
                     </div>
