--- a/dashboard/templates/users/register_user.html
+++ b/dashboard/templates/users/register_user.html
@@ -74,7 +74,7 @@
       />
 
       <h3>National Ranching Management System (NRMS)</h3>
-      <form>
+      <form id ="register-form">
         <input
           type="text"
           class="form-control"
@@ -100,18 +100,10 @@
           placeholder="Confirm Password"
           required
         />
-        <button class="btn" type="submit">
-          <i class="fas fa-user-plus"></i> Register
-        </button>
+        <button class="btn" type="submit">Register</button>
       </form>
       <footer>Copyright © 2024. NARCO NRMS (Version No. 1.0)</footer>
     </div>
-
-    <!-- Bootstrap JS and dependencies -->
     <script src="{% static 'bootstrap/js/bootstrap.min.js'%}"></script>
-    <script
-      src="https://kit.fontawesome.com/a076d05399.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
