--- a/dashboard/templates/ListOfReg/ranch_list.html
+++ b/dashboard/templates/ListOfReg/ranch_list.html
@@ -45,8 +45,7 @@
     <!--begin::Required Plugin(AdminLTE)-->
     <link rel="stylesheet" href="{% static 'AdminLTE/css/adminlte.css' %}" />
     <link href="{% static 'DataTable/datatables.min.css' %}" rel="stylesheet" />
-
-    {% comment %} <link rel="stylesheet" href="{% static 'frontend/dist/assets/index.css' %}"> {% endcomment %}
+    <link href="{% static 'toastr/toastr.min.css' %}" rel="stylesheet" />
 
     <!--end::Required Plugin(AdminLTE)-->
     <!-- apexcharts -->
@@ -417,7 +416,7 @@ Lost Cattles
 
 
 
-<!-- Modal for Adding Ranch -->
+{% comment %} <!-- Modal for Adding Ranch -->
 <div class="modal fade" id="addRanchModal" tabindex="-1" aria-labelledby="addRanchModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -444,9 +443,90 @@ Lost Cattles
       </div>
     </div>
   </div>
-  
+   {% endcomment %}
 
-  
+
+
+<!-- Modal for Adding Ranch -->
+{% comment %} <div class="modal fade" id="addRanchModal" tabindex="-1" aria-labelledby="addRanchModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addRanchModalLabel">Add New Ranch</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        
+        <!-- Notification Area -->
+        <div id="notificationArea"></div>
+
+        <form id="addRanchForm">
+          {% csrf_token %}
+          
+          <div class="mb-3">
+            <label for="ranchName" class="form-label">Ranch Name</label>
+            <input type="text" class="form-control" id="ranchName" name="name" required>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Add Ranch</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div> {% endcomment %}
+
+
+
+
+
+<!-- Modal for Adding Ranch -->
+<div class="modal fade" id="addRanchModal" tabindex="-1" aria-labelledby="addRanchModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="addRanchModalLabel">Add New Ranch</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <!-- Inline Notification for Errors -->
+              <div id="ranchError" class="alert alert-danger d-none"></div>
+
+              <form id="addRanchForm">
+                  {% csrf_token %}
+                  <div class="mb-3">
+                      <label for="ranchName" class="form-label">Ranch Name</label>
+                      <input type="text" class="form-control" id="ranchName" name="name" required>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Add Ranch</button>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
+
+<!-- Bootstrap Toast -->
+<div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 1100;">
+  <div id="successToast" class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+          <div class="toast-body">
+              Ranch added successfully!
+          </div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+
                 <!--end::Small Box Widget 4-->
               </div>
               <!--end::Col-->
@@ -511,7 +591,7 @@ Lost Cattles
     <script src="{% static 'js/s4.js' %}" defer></script>
     <script src="{% static 'js/s5.js' %}" defer></script>
     <script src="{% static 'DataTable/datatables.min.js' %}" defer></script>
-
+    <script src="{% static 'toastr/toastr.min.js' %}" defer></script>
 
 
     <!--end::Required Plugin(AdminLTE)--><!--begin::OverlayScrollbars Configure-->
