--- a/dashboard/templates/home/index.html
+++ b/dashboard/templates/home/index.html
@@ -256,10 +256,10 @@
                   </p>
                  </a>
                  <ul class="nav nav-treeview">
-                  <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                  <li class="nav-item"> <a href="{% url 'login' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
                           <p>Mananing Director(MD)</p>
                       </a> </li>
-                      <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
+                      <li class="nav-item"> <a href="{% url 'register_user' %}" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
                         <p>Supervisor</p>
                     </a> </li>
                     <li class="nav-item"> <a href="#" class="nav-link"> <i class="nav-icon bi bi-circle"></i>
