--- a/dashboard/templates/home/index.html
+++ b/dashboard/templates/home/index.html
@@ -525,7 +525,7 @@
         <!--end::To the end-->
         <!--begin::Copyright-->
         <strong>
-          Copyright &copy; 2014-2024&nbsp;
+          Copyright &copy; 2024&nbsp;
           <a href="www.narco.go.tz" class="text-decoration-none"
             >Narco</a
           >.
@@ -563,7 +563,6 @@
     <script src="{% static 'js/s2.js' %}" defer></script>
     <script src="{% static 'js/s3.js' %}" defer></script>
     <script src="{% static 'js/s4.js' %}" defer></script>
-    <script src="{% static 'js/s5.js' %}" defer></script>
     <script src="{% static 'DataTable/datatables.min.js' %}" defer></script>
 
     <!--end::Required Plugin(AdminLTE)--><!--begin::OverlayScrollbars Configure-->
