--- a/dashboard/templates/users/login.html
+++ b/dashboard/templates/users/login.html
@@ -1,95 +1,245 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% load static %}
+    {%  load static %}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - NRMS</title>
-    <!-- Bootstrap CSS -->
+    <title>Login</title>
     <link
-      rel="stylesheet"
-      href="{% static 'bootstrap/css/bootstrap.min.css' %}"
-    />
-    <link rel="icon" href="{% static 'AdminLTE/img/logo_narco.png' %}" />
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+/>
 
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link rel="icon" href="{% static 'AdminLTE/img/logo_narco.png' %}" />
     <style>
       body {
         background-color: #f8f9fa;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+      }
+      .login-container {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        font-family: Arial, sans-serif;
+        flex-grow: 1;
       }
-      .login-container {
+      .login-card {
+        {% comment %} border: none; {% endcomment %}
+        outline: none;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+        padding: 30px;
         width: 100%;
         max-width: 400px;
-        padding: 20px;
-        background-color: #fff;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        text-align: center;
       }
-      .login-container img {
-        width: 120px;
+      .login-card img {
+        width: 60px;
         margin-bottom: 20px;
       }
-      .login-container h3 {
-        margin-bottom: 30px;
-        font-size: 18px;
-        font-weight: bold;
+      .navbar {
+        background-color: white;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
-      .login-container .form-control {
-        margin-bottom: 15px;
-      }
-      .login-container button {
-        width: 100%;
-        background-color: #007bff;
-        border: none;
-        padding: 10px;
-        border-radius: 5px;
-        color: #fff;
-        font-size: 16px;
-      }
-      .login-container button:hover {
-        background-color: #0056b3;
+      .navbar-brand img {
+        width: 50px;
       }
       footer {
         text-align: center;
-        margin-top: 20px;
-        font-size: 12px;
+        padding: 10px;
         color: #6c757d;
       }
+
       .form-control:focus {
         outline: none;
         box-shadow: none;
       }
+
+      .offcanvas-title strong {
+        font-weight: bold;
+      }
+
+      .container-fluid img {
+        width: 75px;
+        margin-bottom: 5px;
+      }
+
+      .login-card img{
+          width: 120px;
+          margin-bottom: 20px;
+      }
+
+      .btn:focus {
+        outline: none; 
+      }
+
+
     </style>
   </head>
-  <body>
-    <div class="login-container">
-      <img
-        src="{% static 'AdminLTE/img/logo_narco.png' %}"
-        alt="Narco Report System "
-      />
-      <h3>National Ranching Management System (NRMS)</h3>
-      <form id="login">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="enter your username"
-          required
-        />
-        <input
-          type="password"
-          class="form-control"
-          placeholder="enter your password"
-          required
-        />
-        <button class="btn" type="submit">Login</button>
-      </form>
-      <footer>Copyright © 2024. NARCO NRMS (Version No. 1.0)</footer>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{% url 'login' %}">
+        <img src="{% static 'AdminLTE/img/logo_narco.png' %}" alt="Logo"   class="logo-img"  />
+        National Ranching Company Limited
+      </a>
+      <!-- Toggle button for offcanvas -->
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Offcanvas for mobile view -->
+      <div
+        class="offcanvas offcanvas-end"
+        tabindex="-1"
+        id="offcanvasNavbar"
+        aria-labelledby="offcanvasNavbarLabel"
+      >
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+             National Ranching Company Limited 
+          </h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link text-primary" href="#">
+                <i class="nav-icon bi bi-house-fill text-primary"></i>
+               Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-primary" href="#">
+                <i class="nav-icon bi bi-question-octagon-fill text-primary"></i>
+                Help
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-primary" href="#">
+                <i class="nav-icon bi bi-file-earmark-fill text-primary"></i>
+                Docs
+              </a>
+            </li>
+          </ul>
+          <a href="{% url 'register_user' %}" class="btn btn-primary mt-4">
+            <i class="nav-icon bi bi-person-plus-fill"></i>
+            Register
+          </a>
+
+        </div>
+      </div>
+      <!-- Full Navbar for larger screens -->
+      <div class="d-none d-lg-block">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="#">
+              <i class="nav-icon bi bi-house-fill text-primary"></i>
+              Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="#">
+              <i class="nav-icon bi bi-question-octagon-fill text-primary"></i>
+              Help
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="#">
+              <i class="nav-icon bi bi-file-earmark-fill text-primary"></i>
+              Docs
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-primary ms-4" href="{% url 'register_user' %}">
+              <i class="nav-icon bi bi-person-plus-fill"></i>
+              Register
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}" defer></script>
-  </body>
+  </nav>
+
+  <!-- Login Form -->
+  <div class="login-container">
+    <div class="login-card text-center">
+      <img src="{% static 'AdminLTE/img/logo_narco.png' %}" alt="Logo" />
+      <h4 class="mb-3">National Ranching Management System (NRMS)</h4>
+      {% comment %} <div id="notification" class="alert alert-danger d-none" role="alert">
+        <i class="nav-icon bi bi-exclamation-triangle-fill"></i>
+      </div> {% endcomment %}
+
+      <div id="notification" class="alert alert-danger d-none" role="alert">
+        <i class="nav-icon bi bi-exclamation-triangle-fill"></i>
+        <span id="notification-message"></span> <!-- Placeholder for message -->
+    </div>
+    
+      <form id="login-form"  method="POST">
+        <div class="mb-3">
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            autocomplete="email"
+            placeholder="email"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <input
+            type="password"
+            class="form-control"
+            name="password"
+            placeholder="Password"
+            required
+          />
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">
+          <i class="nav-icon bi bi-box-arrow-in-right"></i>
+          Login
+        </button>
+      </form>
+
+      <div class="mt-4">
+        Do you have an account?
+        <a href="{% url 'register_user' %}" class="text-decoration-none">
+          <span>click here</span>
+        </a>
+        
+      </div>
+    </div>
+  </div>
+
+ 
+  <footer class="card-footer pt-5">
+    <div class="float-end d-none d-sm-inline">Kongwa Beef Production</div>
+    <strong>
+      Copyright &copy; 2024&nbsp;
+      <a href="www.narco.go.tz" class="text-decoration-none"
+        >Narco</a
+      >.
+    </strong>
+    All rights reserved.
+  </footer>
+  <script src="{% static 'bootstrap/js/bootstrap.min.js' %}" defer></script>
+  <script src="{% static 'js/s5.js' %}" defer></script>
+</body>
 </html>
